--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 19:05:02 2018</p>
+         Last Run: Sun Nov 25 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>89</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -57,12 +57,12 @@
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>12</td>
+                        <td>11</td>
                         <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>89</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -162,7 +162,7 @@
                "data":[
                  "6",
                  "12",
-                 "12"
+                 "11"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "91",
                  "89",
-                 "89",
-                 "89"
+                 "90"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 19:05:02 2018</p>
+         Last Run: Sun Nov 25 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -247,25 +247,25 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
-                        <td>-7</td>
+                        <td>-6</td>
                         <td>4</td>
                         <td>79</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
+                        <td>8</td>
+                        <td>WSW</td>
                         <td>5</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-3</td>
-                        <td>-7</td>
+                        <td>-4</td>
+                        <td>-8</td>
                         <td>4</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>4</td>
+                        <td>WSW</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -276,7 +276,7 @@
                         <td>84</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>4</td>
                      </tr>
                   </tbody>
@@ -304,8 +304,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
-                 "-7",
+                 "-6",
+                 "-8",
                  "-8"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-3",
+                 "-4",
                  "-4"
                ]
              }
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "79",
-                 "80",
+                 "81",
                  "84"
                ]
              },
@@ -398,7 +398,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "5",
-                 "4",
+                 "5",
                  "4"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 19:05:02 2018</p>
+         Last Run: Sun Nov 25 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -463,7 +463,7 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>24</td>
+                        <td>22</td>
                         <td>66</td>
                         <td>1</td>
                         <td>8</td>
@@ -472,23 +472,23 @@
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Snow Showers</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>33</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>23</td>
                         <td>64</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>N</td>
                         <td>68</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>34</td>
-                        <td>64</td>
+                        <td>24</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-4",
+                 "-6",
                  "-6"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-1",
+                 "-2",
                  "-2"
                ]
              }
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "33",
-                 "34"
+                 "22",
+                 "23",
+                 "24"
                ]
              },
              {
@@ -603,7 +603,7 @@
                "data":[
                  "66",
                  "64",
-                 "64"
+                 "65"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 19:05:02 2018</p>
+         Last Run: Sun Nov 25 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -677,31 +677,31 @@
                         <td>12:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-5</td>
-                        <td>-10</td>
+                        <td>-9</td>
                         <td>33</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
                         <td>81</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>24</td>
+                        <td>34</td>
                         <td>66</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
                         <td>78</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-4</td>
-                        <td>-8</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>24</td>
                         <td>63</td>
                         <td>0</td>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-10",
+                 "-9",
                  "-8",
-                 "-8"
+                 "-7"
                ]
              },
              {
@@ -748,7 +748,7 @@
                "data":[
                  "-5",
                  "-4",
-                 "-4"
+                 "-3"
                ]
              }
            ]
@@ -806,7 +806,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "33",
-                 "24",
+                 "34",
                  "24"
                ]
              },
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
+                 "71",
                  "66",
                  "63"
                ]
